# xt_util

./: CMakeLists.txt  README.md
include/xt_util/: xt_util.hxx
test/: CMakeLists.txt  test_nd_copy.cxx
